updated meta tags.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>AMA Website</title>
+    <title>Ask Me Anything | Lewis Menelaws</title>
+    <meta name="twitter:image" content="assets/img/unnamed.png">
+    <meta name="twitter:description" content="Join Lewis Menelaws on his Discord Server for an Ask me Anything session at 11:30 AM EST on 30th Nov. 2022 (Wednesday)! Look forward to seeing you there... ">
+    <meta property="og:type" content="website">
+    <meta name="description" content="Ask me Anything with Lewis Menelaws on our Discord Server!">
+    <meta name="twitter:title" content="Ask me Anything">
+    <meta name="theme-color" content="#0d6efd">
+    <meta property="og:image" content="assets/img/unnamed.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alata&amp;display=swap">
     <link rel="stylesheet" href="assets/css/Hero-Carousel-images.css">
