--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
             <div class="row row-cols-1 row-cols-lg-3">
                 <div class="col">
                     <p class="text-muted my-2">Copyright&nbsp;© 2022 Lewis Menelaws</p>
+                    <p class="text-muted my-2">Website made by <a href="https://github.com/immaharry">ImmaHarry/HarryDaDev</a></p>
                 </div>
                 <div class="col">
                     <ul class="list-inline my-2">
