--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <div class="d-flex">
                         <div>
                             <p class="fw-bold text-center text-primary mb-0">Explode Code</p>
-                            <p class="text-muted mb-0">Discord Member &amp; Experienced Programmer</p>
+                            <p class="text-muted mb-0">Discord Member &amp; Experienced Programmer (Unlike Explode Code who is NOT A experienced programmer)</p>
                         </div>
                     </div>
                     <div class="card border-0 shadow-none">
