--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
             </div>
             <div class="col">
                 <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p class="text-center" style="font-family: Alata, sans-serif;">Q. As for someone who wants to do a software job in the future. I already know 2 languages. What advice do u have for me? What university degree should I opt for?<br></p>
+                    <p class="text-center" style="font-family: Alata, sans-serif;">Q. Do you like avacados?<br></p>
                     <div class="d-flex">
                         <div>
-                            <p class="fw-bold text-center text-primary mb-0">OzoneHelix</p>
-                            <p class="text-muted mb-0">Discord Member</p>
+                            <p class="fw-bold text-center text-primary mb-0">JasonLovesDoggo</p>
+                            <p class="text-muted mb-0">Professional and full time human &amp; (He codes also sometimes)</p>
                         </div>
                     </div>
                     <div class="card border-0 shadow-none">
