--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="d-flex">
                         <div>
                             <p class="fw-bold text-center text-primary mb-0">JasonLovesDoggo</p>
-                            <p class="text-muted mb-0">Professional and full time human &amp; (He codes also sometimes)</p>
+                            <p class="text-muted mb-0">Professional and full time human (He codes also sometimes)</p>
                         </div>
                     </div>
                     <div class="card border-0 shadow-none">
