--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
             </div>
             <div class="col">
                 <div class="d-flex flex-column justify-content-center align-items-center">
-                    <p class="text-center" style="font-family: Alata, sans-serif;">Q. Do you like avacados?<br></p>
+                    <p class="text-center" style="font-family: Alata, sans-serif;">How to deal with burnout? I have been procrastinating hard for the last couple weeks and haven't touched any of my ongoing projects.<br></p>
                     <div class="d-flex">
                         <div>
-                            <p class="fw-bold text-center text-primary mb-0">JasonLovesDoggo</p>
-                            <p class="text-muted mb-0">Professional and full time human (He codes also sometimes)</p>
+                            <p class="fw-bold text-center text-primary mb-0">WhiteToggled</p>
+                            <p class="text-muted mb-0">Discord Member</p>
                         </div>
                     </div>
                     <div class="card border-0 shadow-none">
